# major-2

./: ## Chat Customization Diagnostics.md  .bandit  .bandit-baseline.json  .dockerignore  .env.example  .gitignore  AGENTS.md  C  CHANGELOG.md  CLAUDE.md  CODEBASE_ARCHITECTURE.md  CODEBASE_DATAFLOW.md  CODEBASE_MODULES.md  DIRECTORY_TREE.md  Dockerfile  FEATURE_MAP.json  FEATURE_MAP.md  GEMINI.md  MIGRATION_MAP.md  Memory.md  README.md  bandit_out.json  bandit_out2.json  bottom_up_dirs.txt  cross_reference_mapper.py  docker-compose.test.yml  feature_mapper.py  generate_agents.py  get_dirs.py  identities.json  pyproject.toml  requirements-extras.txt  requirements.txt  temp_docs_append.md
.github/: AGENTS.md  dependabot.yml
.github/commands/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml  deploy-production.yml  deploy-staging.yml  security.yml
.opencode/: oh-my-opencode.jsonc
.sisyphus/: 150-task-master-plan.md  ARCHITECTURE.md  DATAFLOW.md  SUMMARY.md  WORKFLOW.md  agent-memory-evolution-model.md  architecture.json  boulder.json  change-control-protocol.md  dag.json  dependency-architecture.md  documentation-mutation-strategy.md  execution-order-strategy.md  governance-model.md  plan_change_log.md  ralph-loop.local.md  task-distribution.md  task-marking-completion.md  task-schema.md  task-template-blueprint.md  tasks-summary.json  testing-hierarchy-model.md
.sisyphus/diagrams/: architecture.mmd  dataflow.mmd  deployment.mmd
.sisyphus/drafts/: project-overview.md
.sisyphus/notepads/: apps_agents_md.txt  decisions.md  issues.md  learnings.md  problems.md
.sisyphus/phases/: P0-tasks-v1-original.md  P1-tasks.md  P2-tasks.md  P3-tasks.md  P4-tasks.md  P5-tasks.md  P6-tasks.md  P7-tasks.md
.sisyphus/plans/: 150-task-architecture.md  150-task-enumeration.md  150-task-execution-architecture.md  agent-docs-system.md  init-deep-agents-md.md  memory-md.md
Papers/: AGENTS.md  README_generate_and_compile.md  VVA_Paper_Combined.tex  VVA_Paper_Combined_filled.tex  Voice_Vision_Assistant_Conference_Paper.docx  _generate_docx.py  author_choices.txt  diagram_prompts.txt  implementation_appendix.txt  processing_report.txt  refs.bib  survey_table.tex  tables_content.csv  tables_content.txt
Papers/Health Related Papers/: AGENTS.md
Papers/Overleaf_Project/: AGENTS.md  README_overleaf.txt  main.tex  refs.bib
Papers/PROJECT REPORTS/: AGENTS.md
Papers/Technical papers/: AGENTS.md
Papers/fig/: AGENTS.md  block_diagram_prompt.txt  survey_outcomes_prompt.txt
application/: AGENTS.md  __init__.py
application/event_bus/: AGENTS.md  __init__.py  bus.py
application/frame_processing/: AGENTS.md  __init__.py  confidence_cascade.py  frame_orchestrator.py  freshness.py  live_frame_manager.py  spatial_binding.py
application/pipelines/: AGENTS.md  __init__.py  audio_manager.py  cancellation.py  debouncer.py  frame_sampler.py  integration.py  perception_pool.py  perception_telemetry.py  pipeline_monitor.py  streaming_tts.py  watchdog.py  worker_pool.py
application/session_management/: AGENTS.md  __init__.py  manager.py
apps/: AGENTS.md  __init__.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
configs/: AGENTS.md  config.yaml  development.yaml  production.yaml  staging.yaml
core/: AGENTS.md  __init__.py
data/: AGENTS.md
deployments/: AGENTS.md
docs/: AGENTS.md  ANALYSIS_REPORT.md  DataFlow.md  FEATURES.md  HLD.md  LLD.md  Memory.md  PRODUCTION_AUDIT.md  PRODUCT_DOCUMENTATION.md  SystemArchitecture.md  Voice_Vision_Assistant_HLD.docx  Voice_Vision_Assistant_HLD.md  accessibility-audit.md  analysis_report_v3.md  architecture.md  benchmarking-protocol.md  bootstrap-and-run.md  bug_tracker.md  canary-deployment.md  claude_scenario_insights.md  configuration.md  create_word_doc.py  docs-index.md  face_consent.md  memory_consent.md  opencode-bedrock-setup-guide.md  operations-guide.md  operations.md  production-readiness-checklist.md  progress.md  quality-gate-report.md  scenario_analysis.md  security.md  tech-debt.md  test-strategy.md  upgrade-guide.md  user-guide.md  validation-checkpoints.md
failures/: AGENTS.md  failures_index.jsonl  reproduce_all.sh
fixes/: AGENTS.md  fix_config_docs_undocumented_vars.diff  fix_debug_endpoints_import.diff  fix_health_registry_asyncio_get_event_loop.diff  fix_ocr_easyocr_lazy_import.diff  fix_pipeline_edge_cases_debouncer_api.diff  fix_spatial_edge_cases_schema_api.diff  fix_tts_failover_timing.diff  fix_tts_stt_edge_cases_intent_type.diff
infrastructure/: AGENTS.md  __init__.py
logs/: AGENTS.md
models/: AGENTS.md
my-first-extension/: AGENTS.md
qr_cache/: AGENTS.md
reports/: AGENTS.md  replace-embedding-qwen3-4b-test-report.md
research/: AGENTS.md
scripts/: AGENTS.md  async_audit.py  canary_analysis.py  canary_deploy.py  canary_promote.py  capture_baseline.py  check_deps.py  check_deps.sh  download_models.py  generate_release_notes.py  generate_sbom.py  generate_scenarios.py  install_ocr_deps.sh  profile_hot_path.py  profile_vram.py  run_chaos.py  run_dast.py  run_dep_scan.py  run_load_test.sh  run_local_dev.sh  run_sast.py  run_smoke.py  security_audit.py  validate_env.py  verify_hybrid_memory.py
shared/: AGENTS.md  __init__.py  logging_config.py
tests/: AGENTS.md  conftest.py  conftest_vision.py  generated_scenarios.json  test_action_engine.py  test_audio_engine.py  test_ci_smoke.py  test_confidence_cascade.py  test_continuous_processing.py  test_debug_visualizer.py  test_encryption.py  test_face_engine.py  test_generated_scenarios.py  test_live_pipeline.py  test_memory_extensions.py  test_model_load.py  test_ocr_pipeline.py  test_orchestrator.py  test_perception_telemetry.py  test_priority_scene.py  test_runtime_diagnostics.py  test_session_logger.py  test_shared_types.py  test_smoke_api.py  test_spatial.py  test_speech_vqa_bridge.py  test_startup_guards.py  test_tavus_adapter.py  test_tts_manager.py
(+765 files in other folders)
